--- a/OpenScienceJournal/whistlepunk_library/build.gradle
+++ b/OpenScienceJournal/whistlepunk_library/build.gradle
@@ -5,25 +5,24 @@ apply from: 'version.gradle'
 
 buildscript {
     repositories {
+        google()
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.google.com' }
     }
 
     dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.3'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.6'
     }
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
 
     publishNonDefault true
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode buildVersionCode()
         versionName buildVersionName()
         multiDexEnabled true
@@ -101,41 +100,41 @@ protobuf {
 }
 
 dependencies {
-    compile project(':scalarinputapi')
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-3.1'
-    compile 'com.android.support:support-annotations:26.0.2'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:percent:25.3.1'
-    compile 'com.android.support:exifinterface:25.3.1'
-    compile 'com.github.bumptech.glide:glide:4.1.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
-    compile 'com.google.guava:guava:20.0'
-    compile 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-3.1'
-    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'joda-time:joda-time:2.9.4'
-    compile 'org.joda:joda-convert:1.8'
-    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('junit:junit:4.12') {
+    implementation project(':scalarinputapi')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-3.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:percent:28.0.0'
+    implementation 'com.android.support:exifinterface:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.google.guava:guava:20.0'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-3.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'joda-time:joda-time:2.9.9'
+    implementation 'org.joda:joda-convert:1.8'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('junit:junit:4.12') {
         exclude module: 'hamcrest-core'
     }
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    compile 'com.google.dagger:dagger:2.11'
-    provided 'javax.annotation:jsr250-api:1.0'
-    compile 'com.bignerdranch.android:expandablerecyclerview:2.1.1'
-    testCompile('org.robolectric:robolectric:3.3.2') {
+    implementation 'com.google.dagger:dagger:2.11'
+    compileOnly 'javax.annotation:jsr250-api:1.0'
+    implementation 'com.bignerdranch.android:expandablerecyclerview:2.1.1'
+    testImplementation('org.robolectric:robolectric:3.3.2') {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
-    testCompile 'org.robolectric:shadows-core:3.3.2'
+    testImplementation 'org.robolectric:shadows-core:3.3.2'
 }
