--- a/OpenScienceJournal/whistlepunk_library/src/main/AndroidManifest.xml
+++ b/OpenScienceJournal/whistlepunk_library/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- Vibrate option available for triggers. -->
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <!-- foreground service for recording data -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <uses-feature
         android:name="android.hardware.camera"
